JDK 17 (#10)
* - run test on jdk 17

* - run test on jdk 17

* - run test on jdk 17

* - run test on jdk 17

* gh actions identation

* gh actions identation

* gh actions identation

* Demo execution

* -update README.md