@@ -3,12 +3,22 @@
 [![Java CI with Maven](https://github.com/unrealwork/deep-copy/actions/workflows/maven.yml/badge.svg)](https://github.com/unrealwork/deep-copy/actions/workflows/maven.yml)
 
 Deep Copy implement deep copy of an object via reflection according to [task](https://github.com/Ecwid/new-job/blob/master/Deep-clone.md).
-
 ## Usage
+
+`CopyUtils` class is provided in `com.ecwid.dev.deep.copy` module.
+
+Due to security of modular system in the latest JDKs closed classes of modules should be opened to the library module.
+
+It could be done via `--add-opens=<module>/<package>` option of java executable, for example:
+
+```bash
+java --add-opens=java.base/java.lang=com.ecwid.dev.deep.copy --add-opens=java.base/java.util=com.ecwid.dev.deep.copy -p target/classes -m com.ecwid.dev.deep.copy/com.ecwid.dev.examples.Demo
+```
 
 Example of usage is shown in [`com.ecwid.dev.examples.Demo`](https://github.com/unrealwork/deep-copy/blob/master/src/main/java/com/ecwid/dev/examples/Demo.java) class.
 
-### App output
+
+### App
 
 ```java
 Jan 28, 2023 3:58:44 AM org.ecwid.dev.examples.Demo logObjectClone
@@ -39,7 +49,13 @@ INFO: Deep copied object: Man@4d9a7a03{age=20, name@60634640='test', favoriteBoo
 Demo could be executed via maven
 
 ```bash
-mvn compile exec:java
+mvn compile exec:exec
+```
+
+Or via java executable
+
+```bash
+java --add-opens=java.base/java.lang=com.ecwid.dev.deep.copy --add-opens=java.base/java.util=com.ecwid.dev.deep.copy -p target/classes -m com.ecwid.dev.deep.copy/com.ecwid.dev.examples.Demo
 ```
 
 
